# project

./: .bash_history  .env  .gitignore  Dockerfile  Makefile  README.md  kanpilot.toml  notes.md
Updates/: 6.20.24.md  Init.md
backend/: Cargo.toml  readme.md
backend/src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
backend/src/models/: controller.rs  mod.rs  todos.rs
backend/src/routes/: mod.rs  root.rs  todos.rs
backend/src/web/: login.rs  mod.rs  mw_auth.rs  root.rs  todos.rs
backend/tests/: quick_dev.rs  todos.rs
frontend/: index.html  settings.html  stateofmind.html  synapse.html  thesaurus.html
frontend/js/: main.js  synapse.js
frontend/static/: index.html
frontend/static/css/: settings.css  stateofmind.css  styles.css  synapse.css
