[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower-cookies = { version = "0.10.0" }
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.9"


