[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower-cookies = { version = "0.10.0" }
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
lazy-regex = "3.1.0"
async-trait = "0.1.80"
strum_macros = "0.26.4"
uuid = {version="1", features=["v4", "fast-rng"]}
chrono = "0.4"

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.9"